# darwin-scaffold-studio

./: .dockerignore  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  Dockerfile  HONEST_STATUS_REPORT.md  LICENSE  MANUAL.md  Manifest.toml  ONTOLOGY.md  Project.toml  QUICKSTART.md  README.exocortex  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v2.md  SLOGAN_OFICIAL.md  VOICE_MANIFESTO.md  dev_load.jl  docker-compose.yml  requirements.txt  test_cell_library_extended.jl  test_minimal.jl  test_ollama.jl  test_tissue_library_extended.jl  tissue_library_extended_summary.txt
.claude/: settings.json
archive/: neat_best_genome.dot
darwin-server/: Cargo.toml
darwin-server/public/: agent-client.js  agents.html  app.js  editor.html  index.html  style.css  webgpu-viewer.js  webxr-viewer.js
darwin-server/src/: agents.rs  main.rs
data/: README.md  kaique_sem_morphology.json
desktop/: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  julia_bridge.rs  main.rs  state.rs
docs/: ARCHITECTURE.md  CHECKLIST_RELEASE.md  DEEP_SCIENCE_DISCOVERIES.md  EXTENDED_MATERIALS_REFERENCE.md  FAZER_RELEASE_ZENODO.md  GAP_ANALYSIS_TOP_TIER.md  INSTRUCOES_INICIAR_STUDIO.md  MANUAL_COMPLETO_PIPELINE.md  PIPELINE_RESULTS.md  SCIENTIFIC_POSITIONING_DEEP_RESEARCH.md  ZENODO_GITHUB_WORKFLOW.md  index.md
examples/: FABRICATION_LIBRARY_README.md  example_scaffold_analysis.jl  fabrication_library_demo.jl  list_all_methods.jl  (+4 more)
(+484 files in other folders)
